--- a/index.ipynb
+++ b/index.ipynb
@@ -47,22 +47,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver Class here with properties for each instance variable"
+    "# Define Driver Class here with properties for each instance variable\n",
+    "class Driver:\n",
+    "\n",
+    "    def get_first(self):\n",
+    "        return self._first\n",
+    "\n",
+    "    def set_first(self, first):\n",
+    "        self._first = first\n",
+    "\n",
+    "    def del_first(self):\n",
+    "        del self._first\n",
+    "\n",
+    "    first = property(get_first, set_first, del_first)\n",
+    "\n",
+    "    def get_last(self):\n",
+    "        return self._last\n",
+    "\n",
+    "    def set_last(self, last):\n",
+    "        self._last = last\n",
+    "\n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "\n",
+    "    last = property(get_last, set_last, del_last)\n",
+    "\n",
+    "    def get_rating(self):\n",
+    "        return self._rating\n",
+    "\n",
+    "    def set_rating(self, rating):\n",
+    "        self._rating = rating\n",
+    "\n",
+    "    def del_rating(self):\n",
+    "        del self._rating\n",
+    "\n",
+    "    rating = property(get_rating, set_rating, del_rating)\n",
+    "\n",
+    "    def get_miles_driven(self):\n",
+    "        return self._miles_driven\n",
+    "\n",
+    "    def set_miles_driven(self, miles_driven):\n",
+    "        self._miles_driven = miles_driven\n",
+    "\n",
+    "    def del_miles_driven(self):\n",
+    "        del self._miles_driven\n",
+    "\n",
+    "    miles_driven = property(get_miles_driven, set_miles_driven, del_miles_driven)\n",
+    "\n",
+    "    def fullname(self):\n",
+    "        return f\"{self.first} {self.last}\"\n",
+    "\n",
+    "    def greet_passenger(self):\n",
+    "        return f\"Hello! I'll be your driver today. My name is {self.fullname()}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rachel\n",
+      "Jensen\n",
+      "100\n",
+      "4.9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello! I'll be your driver today. My name is Rachel Jensen\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver = Driver()\n",
     "driver.first = \"Rachel\"\n",
@@ -87,22 +155,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Passenger:\n",
+    "\n",
+    "    def get_first(self):\n",
+    "        return self._first\n",
+    "\n",
+    "    def set_first(self, first):\n",
+    "        self._first = first\n",
+    "\n",
+    "    def del_first(self):\n",
+    "        del self._first\n",
+    "\n",
+    "    first = property(get_first, set_first, del_first)\n",
+    "\n",
+    "    def get_last(self):\n",
+    "        return self._last\n",
+    "\n",
+    "    def set_last(self, last):\n",
+    "        self._last = last\n",
+    "\n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "\n",
+    "    last = property(get_last, set_last, del_last)\n",
+    "\n",
+    "    def get_email(self):\n",
+    "        return self._email\n",
+    "\n",
+    "    def set_email(self, email):\n",
+    "        self._email = email\n",
+    "\n",
+    "    def del_email(self):\n",
+    "        del self._email\n",
+    "\n",
+    "    email = property(get_email, set_email, del_email)\n",
+    "\n",
+    "    def fullname(self):\n",
+    "        return f'{self.first} {self.last}'\n",
+    "\n",
+    "    def yell_name(self):\n",
+    "        return f\"{self.fullname()}\".upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ron\n",
+      "Burgundy\n",
+      "ron.burgundy1984@gmail.com\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'RON BURGUNDY'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "passenger = Passenger()\n",
     "passenger.first = \"Ron\"\n",
@@ -128,6 +252,22 @@
     "## Summary\n",
     "In this lab, we practiced defining classes, instance methods, and utilizing the property function to create, getter setter, and deleter properties so we could access and operate on our instance variables."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finished January 12, 2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -146,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
